[package]
name = "amber"
version = "0.1.7"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"
description = "Manage secret values in-repo via public key cryptography"
readme = "README.md"
homepage = "https://github.com/fpco/amber"
repository = "https://github.com/fpco/amber"
license = "MIT"
keywords = ["continuous-integration", "secrets", "encryption"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
env_logger = "0.11.10"
fs-err = "2.11.0"
log = "0.4.29"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.149"
crypto_box = { version = "0.9.1", features = ["seal", "rand_core", "getrandom"]}
hex = "0.4.3"
sha2 = "0.11.0"
base64 = "0.22.1"

[build-dependencies]
anyhow = "1.0.102"
vergen-gix = { version = "9.1.0", default-features = false, features = ["build"] }

[dev-dependencies]
assert_cmd = "2.2.0"
tempfile = "3.27.0"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
